# aiogram-translation

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
aiogram_translation/: __init__.py  _translator.py  errors.py  models.py
aiogram_translation/middlewares/: TranslationMiddleware.py  __init__.py
examples/: custom_extract_function.py  language_linking.py  main.py  translations.py
