[metadata]
name = aiogram-translation
version = 1.2.1
author = Roman Poltorabatko
author_email = barabum@duck.com
url = https://github.com/barabum0/aiogram-translation
description = Simple aiogram translation plugin built using pydantic.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = any
keywords = python, aiogram, telegram, pydantic, translation
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://github.com/barabum0/aiogram-translation/issues

[options]
packages = find:
python_requires = >= 3.10
